# Nimbulite

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: playbooks.yaml
samples/: sample.json
src/nimbulite/: __init__.py  actions.py  engine.py
src/nimbulite/actions/: ec2.py
tests/: test_engine.py
tests/actions/: test_ec2.py
