[project]
name = "nimbulite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew McKenzie", email = "url54.andrew@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.39",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "boto3-stubs[ec2]>=1.40.39",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "types-botocore>=1.0.2",
]
